Added missing heading.
2007-10-09  Raphael Quinet  <raphael@gimp.org>

	* about/prehistory.htrw: Added missing heading.

	* about/history.png
	* about/history.gnumeric: Removed the frame around the image.

svn path=/branches/v2.4/; revision=1608

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2007-10-09  Raphaël Quinet  <raphael@gimp.org>
 
+	* about/prehistory.htrw: Added missing heading.
+
+	* about/history.png
+	* about/history.gnumeric: Removed the frame around the image.
+
+2007-10-09  Raphaël Quinet  <raphael@gimp.org>
+
 	* install.exclude: Don't install about/history.gnumeric.
 
 2007-10-09  Raphaël Quinet  <raphael@gimp.org>
