--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-10-11  Raphaël Quinet  <raphael@gimp.org>
+
+	* release-notes/gimp-2.4.htrw: Added links to the videos provided
+	by Filipe Soares Dilly: Perspective Clone and Foreground Select.
+
 2007-10-10  Raphaël Quinet  <raphael@gimp.org>
 
 	* includes/urls_important.inc: Partially reverted the changes from
