--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-10-14  Martin Nordholts  <martinn@svn.gnome.org>
 
+	* release-notes/gimp-2.4.htrw: Added a description to the
+	Perspective Clone Tool.
+
+2007-10-14  Martin Nordholts  <martinn@svn.gnome.org>
+
 	* release-notes/gimp-2.4.htrw
 	* release-notes/images/2.4-crop-tool.png: Added release note image
 	for the Crop Tool.
