Fixed some minor errors reported by Kevin Cozens.
2007-10-22  Raphael Quinet  <raphael@gimp.org>

	* docs/script-fu-update.htrw: Fixed some minor errors reported by
	Kevin Cozens.

	* style/wgo.css: Updated copyright message and indentation.

	* index.htrw
	* features/index.htrw
	* about/introduction.htrw: Minor updates and cross-linking.

svn path=/branches/v2.4/; revision=1650

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2007-10-22  Raphaël Quinet  <raphael@gimp.org>
+
+	* docs/script-fu-update.htrw: Fixed some minor errors reported by
+	Kevin Cozens.
+
+	* style/wgo.css: Updated copyright message and indentation.
+
+	* index.htrw
+	* features/index.htrw
+	* about/introduction.htrw: Minor updates and cross-linking.
+
 2007-10-21  Sven Neumann  <sven@gimp.org>
 
 	* downloads/Mac.xhtml: also point to the 2.4 Gimp.app for Intel.
