--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-10-23  Raphaël Quinet  <raphael@gimp.org>
+
+	* docs/script-fu-update.htrw: Got rid of the last 'The GIMP' that
+	should have been 'GIMP'.  Removed last line at Saul Goode's
+	request.
+
 2007-10-22  Sven Neumann  <sven@gimp.org>
 
 	* about/splash/images/gimp-splash-r23679.png
