--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-10-23  Jakub Steiner <jimmac@ximian.com>
+
+	* about/splash/stable.html:
+	* style/wgo.css: unbreak layout. corners had glitches, are gone
+		now :(
+
 2007-10-23  Raphaël Quinet  <raphael@gimp.org>
 
 	* about/authors.htrw: Regenerated.
