--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,9 @@
 		workaround (negative margin). Maybe extra menu class would be
 		cleaner, but not when dealing with pretty static website.
 
+		Fixed a little cockup with the screenshot/splash thumbnail
+		styling.
+
 2007-10-23  Jakub Steiner <jimmac@ximian.com>
 
 	* about/splash/stable.html:
