get rid of white pixels on the windows screenshot.
2007-10-23  Jakub Steiner <jimmac@ximian.com>

* release-notes/images/2.4-refreshed-look.png: get rid of white
pixels on the windows screenshot.

svn path=/branches/v2.4/; revision=1659

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-10-23  Jakub Steiner <jimmac@ximian.com>
 
+	* release-notes/images/2.4-refreshed-look.png: get rid of white
+		pixels on the windows screenshot.
+
+2007-10-23  Jakub Steiner <jimmac@ximian.com>
+
 	* style/wgo.css: the menu should have margin, splashes need
 		workaround (negative margin). Maybe extra menu class would be
 		cleaner, but not when dealing with pretty static website.
