--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-10-23  Raphaël Quinet  <raphael@gimp.org>
+
+	* about/history.htrw
+	* about/history.gnumeric: prepare for the release of GIMP 2.4.
+
 2007-10-23  Jakub Steiner <jimmac@ximian.com>
 
 	* release-notes/images/2.4-refreshed-look.png: get rid of white
