--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-10-23  Raphaël Quinet  <raphael@gimp.org>
 
+	* release-notes/images/2.4-align-tool.png: cropped a bit.
+
+2007-10-23  Raphaël Quinet  <raphael@gimp.org>
+
 	* about/history.htrw
 	* about/history.gnumeric: prepare for the release of GIMP 2.4.
 
