--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-10-23  Jakub Steiner <jimmac@ximian.com>
+
+	* release-notes/images/2.4-scalable-brushes.png: more clear
+
 2007-10-23  Raphaël Quinet  <raphael@gimp.org>
 
 	* release-notes/images/2.4-align-tool.png: cropped a bit.
