--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-10-23  Sven Neumann  <sven@gimp.org>
+
+	* release-notes/gimp-2.4-cm.htrw: extended the section about color
+	management.
+
 2007-10-23  Jakub Steiner <jimmac@ximian.com>
 
 	* release-notes/images/2.4-scalable-brushes.png: more clear
