--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2007-10-23  Raphaël Quinet  <raphael@gimp.org>
+
+	* release-notes/gimp-2.4.htrw
+	* release-notes/gimp-2.4-cm.htrw: minor corrections.
+
+	* release-notes/images/2.4-align-tool.png: desaturated a bit,
+	added some stars in the background.
+
 2007-10-23  Jakub Steiner <jimmac@ximian.com>
 
 	* features/index.htrw: add a link to the tutorials page.
