--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,19 @@
+2007-10-24  Raphaël Quinet  <raphael@gimp.org>
+
+	* release-notes/gimp-2.4.htrw
+	* release-notes/images/2.4-zoom-display.png: added text and image
+	describing some improvements to the display code in GIMP 2.4.
+
+	* release-notes/gimp-2.4-cm.htrw: applied patch provided by
+	Alexandre Prokoudine, providing some additional hints.
+
+	* release-notes/index.htrw: changed the link to the future 2.5
+	releases.
+
+	* irc.htrw: added local links.
+
+	* docs/userfaq.htrw: minor updates, added lots of FIXMEs.
+
 2007-10-23  Raphaël Quinet  <raphael@gimp.org>
 
 	* release-notes/gimp-2.4.htrw
