--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-10-24  Sven Neumann  <sven@gimp.org>
+
+	* release-notes/gimp-2.4-cm.htrw: shortened; this is not the user
+	manual.
+
 2007-10-24  Raphaël Quinet  <raphael@gimp.org>
 
 	* release-notes/images/2.4-align-tool.png: shifted by one pixel.
