--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-10-24  Raphaël Quinet  <raphael@gimp.org>
+
+	* features/index.htrw: removed the plea for help.
+
 2007-10-24  Sven Neumann  <sven@gimp.org>
 
 	* release-notes/gimp-2.4-cm.htrw: shortened; this is not the user
