--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-10-24  Jakub Steiner <jimmac@ximian.com>
+
+	* index.htrw: add alt to be valid
+	* /features/index.htrw: add mac os
+
 2007-10-24  Raphaël Quinet  <raphael@gimp.org>
 
 	* includes/wgo-page-fini.xhtml: Removed "GIMP everywhere" until we
