--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2007-10-24  Jakub Steiner <jimmac@ximian.com>
 
+	* release-notes/gimp-2.4.htrw
+	* release-notes/images/2.4-releasesplash.jpg
+	* release-notes/images/2.4-releasesplash.png: use a smaller
+	filesize
+
+2007-10-24  Jakub Steiner <jimmac@ximian.com>
+
 	* images/frontsplash24.png: pngcrushed 5kB off it.
 
 2007-10-24  Jakub Steiner <jimmac@ximian.com>
