--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2007-10-24  Sven Neumann  <sven@gimp.org>
+
+	* macintosh/index.htrw
+	* unix/index.htrw
+	* windows/index.htrw: removed the "Configuration" section, it was
+	out of date and misleading.
+
 2007-10-24  Jakub Steiner <jimmac@ximian.com>
 
 	* release-notes/gimp-2.4.htrw
