--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-10-24  Sven Neumann  <sven@gimp.org>
+
+	* downloads/source.xhtml: fixed grammar.
+
 2007-10-24  Raphaël Quinet  <raphael@gimp.org>
 
 	* release-notes/images/2.4-zoom-display.png: redid the screenshot
