made the color management image clickable.
2007-10-24  Raphael Quinet  <raphael@gimp.org>

	* release-notes/gimp-2.4.htrw: made the color management image
	clickable.

svn path=/branches/v2.4/; revision=1686

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-10-24  Raphaël Quinet  <raphael@gimp.org>
+
+	* release-notes/gimp-2.4.htrw: made the color management image
+	clickable.
+
 2007-10-24  Sven Neumann  <sven@gimp.org>
 
 	* downloads/source.xhtml: fixed grammar.
