--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-10-24  Raphaël Quinet  <raphael@gimp.org>
+
+	* windows/index.htrw
+	* downloads/Windows.xhtml: fixed the spelling of Jernej's name.
+
 2007-10-24  Sven Neumann  <sven@gimp.org>
 
 	* release-notes/images/2.4-refreshed-look.png: manipulated the
