added warning about release candidates, until the 2.4.0 binaries are
2007-10-24  Raphael Quinet  <raphael@gimp.org>

	* downloads/Mac.xhtml: added warning about release candidates,
	until the 2.4.0 binaries are available.

svn path=/branches/v2.4/; revision=1696

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-10-24  Raphaël Quinet  <raphael@gimp.org>
 
+	* downloads/Mac.xhtml: added warning about release candidates,
+	until the 2.4.0 binaries are available.
+
+2007-10-24  Raphaël Quinet  <raphael@gimp.org>
+
 	* bugs/index.htrw: added link to the gnome-love bugs.
 
 2007-10-24  Raphaël Quinet  <raphael@gimp.org>
