--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-10-25  Sven Neumann  <sven@gimp.org>
+
+	* release-notes/gimp-2.4.htrw: fixed a typo.
+
 2007-10-25  Raphaël Quinet  <raphael@gimp.org>
 
 	* release-notes/images/2.4-video-fgselect.jpg
